Refactoring after review Added TODO comments

--- a/FrontEnd/documentation/coverage.html
+++ b/FrontEnd/documentation/coverage.html
@@ -70,10 +70,10 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./injectables/ApiuserService.html">src/app/apiuser.service.ts</a>
+                <a href="./injectables/ApiUserService.html">src/app/apiuser.service.ts</a>
             </td>
             <td>injectable</td>
-            <td>ApiuserService</td>
+            <td>ApiUserService</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/13)</span>
