--- a/FrontEnd/documentation/overview.html
+++ b/FrontEnd/documentation/overview.html
@@ -35,7 +35,7 @@
 <ol class="breadcrumb">
     <li>Overview</li>
 </ol>
-  
+
 <div class="text-center module-graph-container">
     <div id="module-graph-svg">
         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -184,15 +184,15 @@
 <path fill="none" stroke="black" d="M419,-85.07C419,-103.36 419,-128.8 419,-128.8 419,-128.8 735.14,-128.8 735.14,-128.8"/>
 <polygon fill="black" stroke="black" points="735.14,-132.3 745.14,-128.8 735.14,-125.3 735.14,-132.3"/>
 </g>
-<!-- ApiuserService -->
+<!-- ApiUserService -->
 <g id="node11" class="node">
-<title>ApiuserService</title>
+<title>ApiUserService</title>
 <ellipse fill="#fdb462" stroke="black" cx="260" cy="-66.8" rx="70.63" ry="18"/>
-<text text-anchor="middle" x="260" y="-62.6" font-family="Times,serif" font-size="14.00">ApiuserService</text>
+<text text-anchor="middle" x="260" y="-62.6" font-family="Times,serif" font-size="14.00">ApiUserService</text>
 </g>
-<!-- ApiuserService&#45;&gt;AppModule -->
+<!-- ApiUserService&#45;&gt;AppModule -->
 <g id="edge10" class="edge">
-<title>ApiuserService&#45;&gt;AppModule</title>
+<title>ApiUserService&#45;&gt;AppModule</title>
 <path fill="none" stroke="black" d="M260,-84.93C260,-105.37 260,-135.8 260,-135.8 260,-135.8 735.21,-135.8 735.21,-135.8"/>
 <polygon fill="black" stroke="black" points="735.21,-139.3 745.21,-135.8 735.21,-132.3 735.21,-139.3"/>
 </g>
@@ -219,7 +219,7 @@
         <button id="zoom-out" class="btn btn-default btn-sm">Zoom out</button>
     </div>
 </div>
-  
+
 <div class="tab-content overview">
     <div class="row">
         <div class="col-sm-3">
@@ -269,7 +269,7 @@
     </div>
 </div>
 <script src="js/libs/svg-pan-zoom.min.js"></script>
-<script src="js/svg-pan-zoom.controls.js"></script> 
+<script src="js/svg-pan-zoom.controls.js"></script>
 
 
 
